# chancy

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE.md  README.md  chancy.app.html  chancy.errors.html  chancy.executor.html  chancy.executors.asyncex.html  chancy.executors.base.html  chancy.executors.html  chancy.executors.process.html  chancy.executors.sub.html  chancy.executors.thread.html  chancy.html  chancy.hub.html  chancy.job.html  chancy.logger.html  chancy.migrate.html  chancy.plugin.html  chancy.plugins.api.html  chancy.plugins.cron.html  chancy.plugins.html  chancy.plugins.leadership.html  chancy.plugins.metrics.html  chancy.plugins.pruner.html  chancy.plugins.recovery.html  chancy.plugins.reprioritize.html  chancy.plugins.retry.html  chancy.plugins.sentry.html  chancy.plugins.web.html  chancy.plugins.workflow.html  chancy.queue.html  chancy.rule.html  chancy.utils.html  chancy.worker.html  design.html  docker-compose.yml  faq.html  genindex.html  (+7 more)
.github/workflows/: docs_only.yml  release.yml  test.yml
_modules/: index.html
_modules/chancy/: app.html  hub.html  logger.html  migrate.html  plugin.html  utils.html  worker.html
_sources/: chancy.app.rst.txt  chancy.errors.rst.txt  chancy.executors.asyncex.rst.txt  chancy.executors.base.rst.txt  chancy.executors.process.rst.txt  chancy.executors.rst.txt  chancy.job.rst.txt  chancy.migrate.rst.txt  chancy.plugin.rst.txt  chancy.plugins.api.rst.txt  chancy.plugins.cron.rst.txt  chancy.plugins.pruner.rst.txt  chancy.plugins.recovery.rst.txt  chancy.plugins.reprioritize.rst.txt  chancy.plugins.retry.rst.txt  chancy.plugins.rst.txt  chancy.plugins.web.rst.txt  chancy.queue.rst.txt  chancy.rst.txt  chancy.utils.rst.txt  design.rst.txt  faq.rst.txt  index.rst.txt
_sources/guide/: executors.rst.txt  index.rst.txt  jobs.rst.txt  limiting_resources.rst.txt  plugins.rst.txt  queues.rst.txt  worker.rst.txt  workers.rst.txt
_sources/howto/: django.rst.txt  fastapi.rst.txt  index.rst.txt  jobs.rst.txt  log.rst.txt  retry.rst.txt
_static/: workflow.dot
chancy/: __init__.py  app.py  chancy.py  cli.py  client.py  errors.py  executor.py  hub.py  job.py  logger.py  migrate.py  plugin.py  queue.py  retry.py  rule.py  utils.py  worker.py
chancy/cli/: __init__.py  cli.py  misc.py  queue.py  worker.py
chancy/contrib/: __init__.py
chancy/executors/: __init__.py  async_.py  asyncex.py  base.py  process.py  sub.py  thread.py
chancy/migrations/: v1.py  v2.py  v3.py  v4.py  v5.py  v6.py
chancy/plugins/: __init__.py  deadline.py  leadership.py  live.py  plugin.py  pruner.py  recovery.py  reprioritize.py  retry.py  (+2 more)
docs/: chancy.executor.rst  chancy.executors.async_.rst  chancy.executors.asyncex.rst  chancy.executors.base.rst  chancy.executors.process.rst  chancy.executors.rst  chancy.executors.sub.rst  chancy.executors.thread.rst  chancy.hub.rst  chancy.logger.rst  chancy.plugins.api.rst  chancy.plugins.cron.rst  chancy.plugins.deadline.rst  chancy.plugins.leadership.rst  chancy.plugins.metrics.rst  chancy.plugins.plugin.rst  chancy.plugins.pruner.rst  chancy.plugins.recovery.rst  chancy.plugins.rst  chancy.plugins.rule.rst  chancy.plugins.sentry.rst  chancy.plugins.trigger.rst  chancy.plugins.workflow.rst  chancy.queues.pg.rst  chancy.queues.rst  chancy.retry.rst  chancy.rst  chancy.rule.rst  chancy.worker.rst  conf.py  executors.rst  faq.rst  index.rst  jobs.rst  plugins.rst  similar.rst
guide/: executors.html  index.html  jobs.html  limiting_resources.html  plugins.html  queues.html  recovery.html  worker.html  workers.html
howto/: celery.html  context.html  django.html  fastapi.html  index.html  jobs.html  log.html  retry.html
tests/: conftest.py  test_app.py  test_concurrency.py  test_explicit_pool.py  test_jobs.py  test_plugin.py  test_queues.py  test_retry.py  test_scale.py  test_worker.py
(+160 files in other folders)
