[project]
name = "chancy"
version = "0.10.2"
description = "A simple and flexible job queue for Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tyler Kennedy", email = "tk@tkte.ch" }
]
dependencies = [
    "psycopg[pool]>=3.2.1",
]

[project.urls]
Repository = "https://github.com/tktech/chancy"

[project.optional-dependencies]
cron = ["croniter>=2.0.5"]
web = [
    "starlette>=0.37.2",
    "uvicorn[standard]>=0.30.1"
]

[tool.uv]
dev-dependencies = [
    "pytest-postgresql>=6.0.0",
    "pytest-asyncio>=0.23.7",
    "pytest>=8.2.0",
    "sphinx>=7.3.7",
    "furo>=2024.5.6",
    "pytest-cov>=5.0.0",
    "sentry-sdk>=2.3.1",
    "ghp-import>=2.1.0",
]

[tool.hatch.build.targets.wheel]
artifacts = [
    "chancy/plugins/api/dist/**"
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "chancy/plugins/api/dist/**"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
