[project]
name = "chancy"
version = "0.14.0"
description = "A simple and flexible job queue for Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Tyler Kennedy", email = "tk@tkte.ch" }
]
dependencies = [
    "psycopg[pool]>=3.2.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/tktech/chancy"
Documentation = "https://tkte.ch/chancy/"

[project.optional-dependencies]
cron = ["croniter>=2.0.5"]
web = [
    "starlette>=0.37.2",
    "uvicorn[standard]>=0.32.0"
]
cli = [
    "click"
]
sub = [
    "interpreters-pep-734>=0.4.1; python_version >= '3.13'",
]

[project.scripts]
chancy = "chancy.cli.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest-postgresql>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.2.0",
    "sphinx>=7.3.7",
    "sphinx-inline-tabs>=2023.4.21",
    "furo>=2024.5.6",
    "pytest-cov>=5.0.0",
    "sentry-sdk>=2.3.1",
    "ghp-import>=2.1.0",
    "pytest-benchmark>=5.1.0",
]

[tool.hatch.build.targets.wheel]
artifacts = [
    "chancy/plugins/api/dist/**"
]

[tool.hatch.build.targets.sdist]
artifacts = [
    "chancy/plugins/api/dist/**"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 80